Fix: Table select overflow issue (#1073)

--- a/packages/reports/app/styles/navi-reports/components/navi-table-select.less
+++ b/packages/reports/app/styles/navi-reports/components/navi-table-select.less
@@ -11,6 +11,7 @@
     align-items: center;
     display: flex;
     flex: 1;
+    min-width: 0;
 
     .ember-power-select-trigger,
     .ember-power-select-trigger:focus {
@@ -29,9 +30,5 @@
 
   &__dropdown-list.ember-power-select-dropdown {
     font-size: 14px;
-
-    .ember-power-select-option span {
-      display: flex;
-    }
   }
 }
